...

	override func viewDidAppear(_ animated: Bool) {
		super.viewDidAppear(animated)

		if UserDefaultsController.shared.isFastlane {

			var snapshotDocuments = ["Think different.rtf", "Fonts.rtf", "Test Document.rtf"]

			UserDefaultsController.shared.isDarkMode = false

			NotificationCenter.default.post(name: .themeChanged, object: nil)

			let url = Bundle.main.url(forResource: snapshotDocuments[snapshotDocumentIndex], withExtension: nil)!
...
